Alterações de textos nos arquivos index.html e compiladores.html

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Tudo sobre C</h1>
-        <p>Configuração de ambiente, conceitos fundamentais e uso de bibliotecas em C.</p>
+        <p>Vamos começar pela jornada de aprendizado em programaçã com C.</p>
     </header>
 
     <main>
