Hello World como você nunca viu

--- a/html/index.html
+++ b/html/index.html
@@ -17,13 +17,13 @@
 
         <section>
             <h2>Configuração do Ambiente</h2>
-            <p>Instale um <a href="../pages/compiladores.html">compilador</a>: Para Windows, você pode usar o MinGW ou o TDM-GCC. No Linux, o GCC geralmente já está instalado ou pode ser facilmente instalado. No meu caso, usei WSL2 e instalei o GCC no Arch usando:</p>
+            <br>Instale um <a href="../pages/compiladores.html">compilador</a>: Para Windows, você pode usar o MinGW ou o TDM-GCC. No Linux, o GCC geralmente já está instalado ou pode ser facilmente instalado. No meu caso, usei WSL2 e instalei o GCC no Arch usando:</p>
             
             <pre><code>yay -S gcc</code></pre>
 
             <p>Outras variações para <code>pacman</code> e <code>apt</code>:</p>
 
-            <pre><code>pacman -S gcc</code></pre>
+            <pre><code>sudo pacman -S gcc</code></pre>
             <pre><code>sudo apt install gcc</code></pre>
         </section>
 
@@ -80,6 +80,11 @@ int main() {
             <p>Macros são definidas usando a diretiva <code>#define</code> e podem ser usadas para criar constantes ou expressões. Exemplo:</p>
             <pre><code>#define PI 3.14</code></pre>
             <p>As macros podem simplificar o código e torná-lo mais legível. No entanto, é importante usá-las com cuidado para evitar problemas de depuração e manutenção.</p>
+        </section>
+
+        <section>
+            <h2>Declarando Variaveis é Arrays</h2>
+            <p><a href="">ponteiro</a></p>
         </section>
 
     </main>
